discussion/kv_engine/176712/176712_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Pass Producer to BackfillManagerTask

The ownership hierarchy is the following:

  Producer
    -> BackfillManager
      -> BackfillTask
        -> BackfillManager (weak)

, with Task that stores a weak reference to Manager.

That model allows scenarios where a Producer connection has gone but
Task/Manager are still alive. Task needs to run a backfill for
realizing that the connection has been removed.

With this change we give Task a direct weak reference to Producer.
That way, Task would spot a dead Producer (and thus cancel itself)
before entering any backfill scan-loop.

Change-Id: I436cf6a7d5b5ebba6a913aa1e803c5c31dfaeac1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-27 10:06:28.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-27 10:06:39.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304211/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-27 10:59:46.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/295/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/295/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/289/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/289/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/405/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [74/93]: test dcp early termination...Exceeded maximum wait time of 60000000us waiting for stat "ep_dcp_num_running_backfills(dcp)" to be 0 (last value:1) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/405/ )

Failure of GoogleTest "CollectionsRbacScope.ScopeAccessBucketEaccess":

<pre>
[ RUN      ] CollectionsRbacScope.ScopeAccessBucketEaccess
unknown file: error: SEH exception with code 0xc0000005 thrown in SetUp().
[  FAILED  ] CollectionsRbacScope.ScopeAccessBucketEaccess (0 ms)
CollectionsRbacScope.ScopeAccessBucketEaccess
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/405/ )

Timeout of a CTest test 422/422 Test #306: ep_testsuite_xdcr.full_eviction.comp_active ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/405/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/306/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core
[2022-06-27T10:29:24.936Z] 
[2022-06-27T10:29:24.936Z] 
[2022-06-27T10:29:24.936Z] 99% tests passed, 3 tests failed out of 442
[2022-06-27T10:29:24.936Z] 
[2022-06-27T10:29:24.936Z] Total Test time (real) = 399.72 sec
[2022-06-27T10:29:24.936Z] 
[2022-06-27T10:29:24.936Z] The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/306/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/306/ )

Test exceeded the timeout:
[2022-06-27T10:29:24.935Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/314/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [74/93]: test dcp early termination...Exceeded maximum wait time of 60000000us waiting for stat "ep_dcp_num_running_backfills(dcp)" to be 0 (last value:1) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/314/ )

Failure of GoogleTest "CollectionsRbacBucket.BucketAccessCollection2Success":

<pre>
[ RUN      ] CollectionsRbacBucket.BucketAccessCollection2Success
[2022-06-27T10:24:37.980Z] Received exception:  DcpPipe::event_callback: got event: 17. wait 5 sec before throwing the exception
[2022-06-27T10:24:37.980Z] Failed building socket: connect() failed (127.0.0.1 41703): Connection reset by peer
[2022-06-27T10:24:37.980Z] unknown file: Failure
[2022-06-27T10:24:37.980Z] C++ exception with description "Failed to connect to: localhost:41703: Connection reset by peer" thrown in SetUp().
[2022-06-27T10:24:37.980Z] [  FAILED  ] CollectionsRbacBucket.BucketAccessCollection2Success (0 ms)
CollectionsRbacBucket.BucketAccessCollection2Success
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/314/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/314/ )

Test exceeded the timeout:
[2022-06-27T10:25:00.264Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/293/ : FAILURE

Test exceeded the timeout:
[2022-06-27T10:18:21.678Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/435/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/304/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/304/ )

Test exceeded the timeout:
[2022-06-27T10:48:07.311Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/304/ : FAILURE

Failure of GoogleTest "CollectionsRbacBucket.BucketAccessFail":

<pre>
[ RUN      ] CollectionsRbacBucket.BucketAccessFail
[2022-06-27T10:48:22.191Z] Failed building socket: connect() failed (127.0.0.1 42281): Connection refused
[2022-06-27T10:48:22.191Z] unknown file: Failure
[2022-06-27T10:48:22.191Z] C++ exception with description "Failed to connect to: localhost:42281: Connection refused" thrown in SetUp().
[2022-06-27T10:48:22.191Z] [  FAILED  ] CollectionsRbacBucket.BucketAccessFail (3 ms)
CollectionsRbacBucket.BucketAccessFail
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/304/ )

ThreadSanitizer issue: heap-use-after-free (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/297/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
